syntax = "proto3";

package candlefl.v1;

message CoordinatorMessage {
    oneof message {
        WeightsRequest weights_request = 1;
        FitRequest fit_request = 2;
    }
}

message WeightsRequest {
    string job_id = 1;
}

message FitRequest {
    string job_id = 1;
    bytes weights = 2;
}
